# jabba_ai_core

./: Apptainer  README.md  pyproject.toml  requirements.txt
src/jabba_ai_core/: __init__.py  ab_contrast.py  ab_fats.py  ab_liver.py  ab_muscles.py  ab_organ.py  ab_slab.py  ab_spleen.py  double.py  example.py
src/jabba_ai_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/jabba_ai_core/core/: __init__.py  core1.py  image_predict.py  image_preprocess.py  jabba_custom_objects.py  jabba_segment_models.py  sitk_utils.py
tools/: ab_contrast_gradio.py  ab_fats_gradio.py  ab_liver_gradio.py  ab_muscles_gradio.py  ab_slab_gradio.py  ab_spleen_gradio.py  process_image_apptainer.sh
