[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jabba_ai_core"
version = "0.0.1"
description = "Core functions for jabba_ai_insights"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["medical", "imaging"]
authors = [
  {name = "Jeffrey Duda", email = "jeff.duda@gmail.com" }
]
maintainers = [
  {name = "Jeffrey Duda", email = "jeff.duda@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "tensorflow",
  "numpy",
  "SimpleITK",
  "torch",
  "monai"
]
